home overflow hidden to stop mobile scroll

--- a/staticfiles/newcss/dashboard.css
+++ b/staticfiles/newcss/dashboard.css
@@ -1,6 +1,8 @@
 body {
     background-color: #BFC1C2;
     background-image: url('/user/static/images/sunsetbg.jpg');
+    overflow: hidden;
+    position: relative;
 }
 
 hr {
